--- a/backend/AU/templates/partials/nav.html
+++ b/backend/AU/templates/partials/nav.html
@@ -40,9 +40,7 @@
               Visa Facts
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              {% for visa in visas %}
-                <li><a class="dropdown-item" href="{% url 'visafacts' visa.id %}">{{visa.visa_title}}</a></li>
-              {% endfor %}
+                <li><a class="dropdown-item" href="">Hello</a></li>
             </ul>
           </li>
           <li class="nav-item">
